--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="hero_image">
-                <img src="/image/boyimg.png" alt="">
+                <img src="/image/boy.png" alt="">
             </div>
         </div>
     </section>
